<resources>
    <string name="app_name">RunWithMe</string>

    // Toolbar strings
    <string name="recommend_course">추천 코스</string>
    <string name="running_hard">러닝 난이도</string>
    <string name="running_environment">러닝 환경</string>
    <string name="my_running_challenge">러닝 환경</string>
    <string name="recruiting_challenge">모집 중인 챌린지</string>
    <string name="my_challenge">내 챌린지</string>
    <string name="my_record">내 러닝 기록</string>
    <string name="create_challenge">챌린지 생성</string>
    <string name="challegne_detail">챌린지 정보</string>
    <string name="challegne_board">챌린지 게시판</string>
    <string name="recommend_course_by_user">유저들이 추천하는 러닝 코스</string>
    <string name="my_page">마이페이지</string>
    <string name="edit_profile">프로필 수정</string>
    <string name="register_profile">프로필 등록</string>
    <string name="record">기록</string>
    <string name="my_board">작성글</string>
    <string name="achieve">업적</string>
    <string name="join">회원가입</string>
    <string name="practice_running">연습 러닝</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="login">로그인</string>

    <string name="research_in_range">범위 내 재검색</string>

    <string name="distance_header">이동 거리</string>
    <string name="time_header">소요 시간</string>
    <string name="calorie_header">칼로리</string>
    <string name="speed_header">평균 속도</string>
    <string name="weight">몸무게</string>
    <string name="weight_unit">kg</string>
    <string name="height">키</string>
    <string name="height_unit">cm</string>
    <string name="goal">목표</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_hint">ex) 런위드미</string>
    <string name="email">이메일</string>
    <string name="id">아이디</string>
    <string name="phone">핸드폰 번호</string>
    <string name="verify_number">인증 번호</string>
    <string name="entry_fee">참가비</string>
    <string name="password">비밀번호</string>
    <string name="change_password">변경할 비밀번호</string>
    <string name="change_password_confirm">변경할 비밀번호 확인</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="not_equal_password">입력하신 비밀번호가 일치하지 않습니다.</string>
    <string name="not_length_password">비밀번호는 8 ~ 16자 이상이어야 합니다.</string>
    <string name="not_matches_nickname_rule">"닉네임은 한글, 영문, 숫자로만 2자~8자까지 입력 가능합니다."</string>


    <string name="ok">확인</string>
    <string name="recommend">추천</string>
    <string name="next">다음</string>
    <string name="cancel">취소</string>
    <string name="add">등록</string>
    <string name="edit">수정</string>
    <string name="btn_register">등록하기</string>


    <string name="route_detail">상세 경로</string>

    <string name="description_about_challenge">확실한 동기부여를 위해 고안된 비대면 러닝 챌린지입니다.\n일정 기간 동안 1주 기준 목표를 설정하고 하루에 1번 챌린지원들과 각자 러닝하고 기록을 공유합니다.\n\n챌린지를 시작하기 전에 참가비로 포인트를 걸고 목표에 성공하면 실패한 팀원들의 포인트를 나눠 갖습니다. 더 많은 러닝 챌린지에 참여할 수 있습니다.\n챌린지원들과 같은 목표를 위해 달리고 더 많은 포인트를 얻어 성공적으로 러닝 습관을 만들어보세요 !</string>
    <string name="tv_rule">챌린지 진행 방식</string>

    <string name="challnege_name">챌린지명</string>
    <string name="challenge_image">챌린지 이미지</string>
    <string name="challenge_description">챌린지 소개</string>
    <string name="challenge_term">챌린지 기간</string>
    <string name="challenge_start_date_range">시작 범위</string>
    <string name="challenge_start_date">시작 일</string>
    <string name="challenge_end_date">종료 일</string>
    <string name="running_start_time">러닝 시작 시간</string>
    <string name="goal_duration">목표 기간</string>
    <string name="setting_goal">목표 설정</string>
    <string name="each_day_goal_amount">일일 목표</string>
    <string name="each_weeks_goal_days">1주간 목표 횟수</string>
    <string name="challenge_max_member">참가 가능 인원</string>
    <string name="cost">참가비</string>
    <string name="time">시간</string>
    <string name="distance">거리</string>
    <string name="km">km</string>
    <string name="week">주</string>
    <string name="day">일</string>
    <string name="people_unit">명</string>
    <string name="point">point</string>
    <string name="setting_password">비밀번호 설정</string>
    <string name="exist">있음</string>
    <string name="no_exist">없음</string>
    <string name="create">생성</string>

    <string name="search">검색</string>


    <string name="calorie">%d kcal</string>
    <string name="running_result_day">%s 년 %d 월 %d 일 러닝</string>

    <string name="challenge_period">%d ~ %d</string>
    <string name="challenge_member_limit">%d / %d</string>
    <string name="challenge_cycle">주 %d회</string>
    <string name="challenge_cost">%dP</string>

    <string name="cumulative_record">누적 기록</string>
    <string name="total_distance">총 거리</string>
    <string name="average_speed">평균 속도</string>
    <string name="total_calorie">총 칼로리</string>
    <string name="total_time">총 시간</string>

    <string name="challenge_member_ranking">챌린지원 랭킹</string>
    <string name="sort">정렬 기준</string>
    <string name="practice_alert">연습 결과는 누적 기록에 포함되지 않습니다.</string>
    <string name="minute">분</string>
    <string name="start">시작</string>

    <string name="verify_phone_number">번호 인증</string>
    <string name="verify">인증</string>
    <string name="send_verify_number">인증 번호 전송</string>


    <string name="running">러닝</string>
    <string name="challenge_join">가입</string>
    <string name="challenge_quit">탈퇴</string>
    <string name="running_pause">일시정지</string>
    <string name="running_resume">다시 시작하기</string>

    <string name="running_pause_message">러닝이 일시중지 되었습니다.</string>
    <string name="running_stop_message">러닝이 종료되었습니다.</string>
    <string name="running_pause_not_moving">이동이 없어 러닝이 일시 중지되었습니다.</string>
    <string name="running_resume_when_moving">이동이 감지되어 러닝을 다시 시작합니다.</string>
    <string name="running_pause_too_fast">비정상적인 이동이 감지되어 러닝이 일시 중지되었습니다.</string>
    <string name="not_supported_tts_language">음성 안내를 지원하지 않는 언어입니다.</string>
    <string name="not_supported_location">위치 권한이 허용되지 않았습니다.</string>
    <string name="running_error_not_found">알 수 없는 오류입니다. 다시 러닝을 시작해주세요.</string>


    <string name="email_hint">이메일 형태로 입력해주세요.</string>

    <string name="verify_mail_title">[RunWithMe] 회원가입 인증번호 안내</string>
    <string name="message_no_network">인터넷 연결을 확인해주십시오.</string>
    <string name="message_invalid_id">이메일 형식이 잘못되었습니다.</string>
    <string name="message_duplicate_id">이미 가입된 이메일입니다.</string>
    <string name="message_duplicate_nickname">이미 사용중인 닉네임입니다.</string>
    <string name="message_send_mail">인증번호가 전송되었습니다.</string>
    <string name="message_not_equal_verify">인증번호가 일치하지 않습니다.</string>
    <string name="message_equal_verify">인증번호가 일치합니다.</string>
    <string name="message_delay_send_mail">이미 인증번호가 전송되었습니다. 잠시 후 다시 시도하세요.</string>
    <string name="message_success_join">회원가입이 완료되었습니다.</string>
    <string name="message_fail_join">회원가입에 실패했습니다.</string>
    <string name="message_invalid_nickname">닉네임은 한글, 영문, 숫자로만 2자~8자까지 입력 가능합니다.</string>

    <string name="message_back_btn">뒤로가기 버튼을 한번 더 누르면 회원가입이 종료됩니다.</string>

    <string name="delete_challenge_success">챌린지를 탈퇴했습니다.</string>

    <string name="message_daily_check">출석 체크 100P 지급 완료!</string>
    <string name="message_duplicate_today_daily_check">오늘은 이미 출석했습니다.</string>

    <string name="message_edit_profile_success">프로필이 수정되었습니다.</string>
    <string name="message_edit_profile_fail">프로필 수정에 실패하였습니다.</string>

</resources>