<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="joinVM"
            type="com.side.runwithme.view.join.JoinViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.side.runwithme.component.CustomToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:back_image="@drawable/baseline_arrow_back_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/join" />

        <ScrollView
            android:id="@+id/sv_join"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btn_join"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin_large"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:context=".view.my_page.edit_profile.EditProfileFragment">


                    <TextView
                        android:id="@+id/tv_join_nickname"
                        style="@style/header_text"
                        android:layout_marginStart="@dimen/margin_regular"
                        android:layout_marginTop="@dimen/margin_xlarge"
                        android:text="@string/nickname"
                        android:textSize="@dimen/fontsize_h4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <EditText
                        android:id="@+id/et_join_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="18dp"
                        android:layout_marginTop="8dp"
                        android:hint="@string/nickname_hint"
                        android:inputType="textPersonName"
                        android:text="@={joinVM.nickname}"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@id/spinner_edit_height"
                        app:layout_constraintStart_toStartOf="@id/tv_join_nickname"
                        app:layout_constraintTop_toBottomOf="@id/tv_join_nickname" />

                    <TextView
                        android:id="@+id/tv_join_height"
                        style="@style/header_text"
                        android:layout_marginTop="@dimen/margin_regular"
                        android:text="@string/height"
                        android:textSize="@dimen/fontsize_h4"
                        app:layout_constraintStart_toStartOf="@+id/tv_join_nickname"
                        app:layout_constraintTop_toBottomOf="@id/et_join_nickname" />

                    <Spinner
                        android:id="@+id/spinner_edit_height"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="@+id/tv_join_height"
                        app:layout_constraintTop_toBottomOf="@id/tv_join_height" />

                    <TextView
                        android:id="@+id/tv_join_height_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_sans_regular"
                        android:text="@string/height_unit"
                        android:textColor="@color/black_high_emphasis"
                        android:textSize="@dimen/fontsize_caption"
                        app:layout_constraintBottom_toBottomOf="@id/spinner_edit_height"
                        app:layout_constraintStart_toEndOf="@id/spinner_edit_height" />

                    <TextView
                        android:id="@+id/tv_join_weight"
                        style="@style/header_text"
                        android:layout_marginTop="@dimen/margin_regular"
                        android:text="@string/weight"
                        android:textSize="@dimen/fontsize_h4"
                        app:layout_constraintStart_toStartOf="@+id/tv_join_nickname"
                        app:layout_constraintTop_toBottomOf="@id/spinner_edit_height" />

                    <Spinner
                        android:id="@+id/spinner_edit_weight"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="@id/tv_join_weight"
                        app:layout_constraintTop_toBottomOf="@id/tv_join_weight" />

                    <TextView
                        android:id="@+id/tv_join_weight_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_sans_regular"
                        android:text="@string/weight_unit"
                        android:textColor="@color/black_high_emphasis"
                        android:textSize="@dimen/fontsize_caption"

                        app:layout_constraintBottom_toBottomOf="@id/spinner_edit_weight"
                        app:layout_constraintStart_toEndOf="@+id/spinner_edit_weight" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_join"
            style="@style/disableNextButton"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="8dp"
            android:includeFontPadding="false"
            android:text="@string/add"
            enabledJoinButton="@{joinVM.allDone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_join" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>