<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="findPasswordVM"
            type="com.side.runwithme.view.find_password.FindPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.find_password.FindPasswordActivity">


        <com.side.runwithme.component.CustomToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:back_image="@drawable/baseline_arrow_back_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/find_password" />

        <ScrollView
            android:id="@+id/scv_find_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@id/btn_find_password">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_find_password_email"
                    style="@style/header_text"
                    android:layout_marginStart="@dimen/margin_regular"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:text="@string/email"
                    android:textSize="@dimen/fontsize_h4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <EditText
                    android:id="@+id/et_find_password_email"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:hint="@string/email_hint"
                    android:inputType="textWebEmailAddress"
                    android:maxLines="1"
                    android:text="@={findPasswordVM.email}"
                    app:layout_constraintBottom_toBottomOf="@id/btn_send_number"
                    app:layout_constraintEnd_toStartOf="@id/btn_send_number"
                    app:layout_constraintStart_toStartOf="@id/tv_find_password_email"
                    app:layout_constraintTop_toTopOf="@id/btn_send_number" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_send_number"
                    style="@style/disableSmallNextButton"
                    enabledSendButton="@{findPasswordVM.email}"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_regular"
                    android:layout_marginEnd="@dimen/margin_regular"
                    android:enabled="false"
                    android:padding="@dimen/padding_small"
                    android:text="@string/send_verify_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/et_find_password_email"
                    app:layout_constraintTop_toBottomOf="@id/tv_find_password_email" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_verify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_send_number"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/tv_verify_number"
                        style="@style/header_text"
                        android:layout_marginStart="@dimen/margin_regular"
                        android:layout_marginTop="@dimen/margin_large"
                        android:text="@string/verify_number"
                        android:textSize="@dimen/fontsize_h4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_verify_number"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="@dimen/margin_regular"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:text="@={findPasswordVM.verifyNumber}"
                        app:layout_constraintBottom_toBottomOf="@id/btn_verify"
                        app:layout_constraintEnd_toStartOf="@id/btn_verify"
                        app:layout_constraintStart_toStartOf="@id/tv_verify_number"
                        app:layout_constraintTop_toTopOf="@id/btn_verify" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_verify"
                        style="@style/disableSmallNextButton"
                        enabledVerifyButton="@{findPasswordVM.verifyNumber}"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_regular"
                        android:layout_marginEnd="@dimen/margin_regular"
                        android:enabled="false"
                        android:padding="@dimen/padding_small"
                        android:text="@string/verify"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/et_verify_number"
                        app:layout_constraintTop_toBottomOf="@id/tv_verify_number" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_find_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:visibility="visible"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_verify">

                    <TextView
                        android:id="@+id/tv_password"
                        style="@style/header_text"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="@dimen/margin_regular"
                        android:text="@string/change_password"
                        android:textSize="@dimen/fontsize_h4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="18dp"
                        android:layout_marginTop="8dp"
                        android:inputType="textWebPassword"
                        android:text="@={findPasswordVM.password}"
                        android:maxLines="1"
                        android:maxLength="28"
                        app:layout_constraintStart_toStartOf="@id/tv_password"
                        app:layout_constraintTop_toBottomOf="@id/tv_password" />

                    <TextView
                        android:id="@+id/tv_password_confirm"
                        style="@style/header_text"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="@dimen/margin_regular"
                        android:text="@string/change_password_confirm"
                        android:textSize="@dimen/fontsize_h4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_password" />

                    <EditText
                        android:id="@+id/et_password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="18dp"
                        android:layout_marginTop="8dp"
                        android:inputType="textWebPassword"
                        android:text="@={findPasswordVM.passwordConfirm}"
                        android:maxLines="1"
                        android:maxLength="28"
                        app:layout_constraintStart_toStartOf="@id/tv_password_confirm"
                        app:layout_constraintTop_toBottomOf="@id/tv_password_confirm" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_find_password"
            style="@style/enableNextButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="8dp"
            android:includeFontPadding="false"
            android:text="@string/ok"
            findPasswordState="@{findPasswordVM.doneState}"
            android:onClick="@{()->findPasswordVM.changePassword()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>